--- a/app/views/skill_academy_lessons/lessons/stories.html.erb
+++ b/app/views/skill_academy_lessons/lessons/stories.html.erb
@@ -1,7 +1,7 @@
 As a user, I want to be able to sign in/sign out
-As a user, I want to be able to edit my profile
 
 As a user, I want to be able to create a new course
+As an instructor, I want an email to be sent to myself when I have created a course. 
 As an instructor, I want to be able to edit/update course
 As an instructor, I want to be able to delete a course
 As an instructor, I want to be able to see all of my courses
@@ -14,6 +14,7 @@ As an instructor, I want to be able to add new lessons to a section
 As an instructor, I want to be able to edit/update lessons
 As an instructor, I want to be able to delete lessons
 
+As a user, I want to be able to see the profile picture and introduction of the instructor
 As a user, I want to be able to enroll in courses
 As a user, I want to be able to unenroll in courses
 As a user, I want to be able to rate a course I have enrolled in
