--- a/app/views/skill_academy_lessons/lessons/lesson_13.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_13.html.erb
@@ -15,7 +15,7 @@
     <div class="story-panel">
       <div class="story-user">
         <div class="story-user-text">
-          <strong>takehiromouri</strong> commented 6 days ago
+          <strong>takehiromouri</strong> commented
         </div>
       </div>
 
@@ -50,7 +50,7 @@
   </p>
 </div>
 
-<div class="gotcha" data-gotcha-id="1">
+<div class="gotcha" data-hint-id="2" data-gotcha-id="1">
   <p>
     When we generate controllers, we typically run commands like this:
   </p>
@@ -181,7 +181,7 @@ end
   </p>
 </div>
 
-<div class="hint" data-hint-id="4">
+<div class="hint" data-hint-id="3">
 
   <p>
     Next, let's work on how we can build the feature so that instructors can create new courses.
@@ -205,7 +205,7 @@ end
 
 </div>
 
-<div class="hint" data-hint-id="3">
+<div class="hint" data-hint-id="4">
   <p> 
     Specs are quite useful because they layout the specification of how the application should function.
   </p>
@@ -215,7 +215,7 @@ end
   </p>
 </div>  
 
-<div class="hint" data-hint-id="4">
+<div class="hint" data-hint-id="5">
   <p>
     First, let's lay out the specifications:
   </p>
@@ -257,7 +257,7 @@ end
 </div>  
 
 
-<div class="hint" data-hint-id="5">
+<div class="hint" data-hint-id="6">
   <p>
     Your tests should look something like this:
   </p>    
@@ -325,7 +325,7 @@ end
 
 </div>
 
-<div class="hint" data-hint-id="6">
+<div class="hint" data-hint-id="7">
   <p>
     To make the tests pass, your controller should look like this:
   </p>
@@ -399,7 +399,7 @@ end
 
 </div>
 
-<div class="hint" data-hint-id="6">
+<div class="hint" data-hint-id="9">
   <p>First thing we need to do is create a <code>new.html.erb</code> file inside the <code>instructor/courses</code> directory.</p>
 
   <p>
