--- a/app/views/cards/update_interval.js.erb
+++ b/app/views/cards/update_interval.js.erb
@@ -1,9 +1,9 @@
-<% if @cards.empty? %>
+<% if @due_cards.empty? %>
   completed_sound.play();
 <% else %>
   success_sound.play();
 <% end %>
 
-$("#card_container").html("<%= escape_javascript render partial: 'cards/card', locals: { card: @due_cards.first, cards: @due_cards } %>");
+$("#card_container").html("<%= escape_javascript render partial: 'cards/card', locals: { card: @due_cards.first, due_cards: @due_cards } %>");
 $('#header').html("<%= escape_javascript render partial: '/layouts/nav_contents', locals: { :@due_cards => @due_cards } %>")
 $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
