--- a/app/views/study/index.html.erb
+++ b/app/views/study/index.html.erb
@@ -1,7 +1,7 @@
 <% title("Study Cards | TECHRISE") %>
 
 <div id="card_container">
-  <%= render partial: 'cards/card', locals: { card: @cards.first, cards: @cards } %>
+  <%= render partial: 'cards/card', locals: { card: @due_cards.first, due_cards: @due_cards } %>
 </div>
 
 
