--- a/app/views/skill_academy_lessons/lessons/lesson_4.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_4.html.erb
@@ -47,7 +47,7 @@ services:
 </code></pre>
 </div>
 
-<div class="gotcha" data-gotcha-id="1">
+<div class="gotcha" data-gotcha-id="1" data-hint-id="3">
   <p>
     Be careful of the <code>.travis.yml</code> settings. Is the database you are using the same as the one you are using for your app? (Postgresql)
   </p>
