--- a/app/views/skill_academy_lessons/lessons/lesson_12.html.erb
+++ b/app/views/skill_academy_lessons/lessons/lesson_12.html.erb
@@ -38,7 +38,7 @@
   </p>
 
   <p>
-    In other words, don't try to build out every single aspect of the feature - just focus on building the most important elements of the feature.
+    In other words, <strong>don't try to build out every single aspect of the feature - just focus on building the most important elements of the feature.</strong>
   </p>
 
   <p>
